# delta-comic

./: .editorconfig  .gitignore  .lintstagedrc.json  .lintstagedrc.yaml  .markdownlint.json  .npmrc  .oxfmtrc.json  .oxlintrc.json  .releaserc.mjs  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODOS.md  commitlint.config.ts  components.d.ts  cspell.json  index.html  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.mjs  release.config.mts  release.config.ts  skills-lock.json  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.mts  vite.config.ts  words.txt
.changeset/: bright-comics-count.md
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-install.yml  bug-runtime.yml  future-new.yml  future-support.yml  other.yml
.github/workflows/: build.yaml  coverage.yaml  dev-build.yaml  lint.yaml  publish.yaml  release.yaml  test.yaml
.husky/: commit-msg  pre-commit
docs/: release-workflow.md
public/: setup.css  system.min.js
script/: dev.helper.ts  install.sh  release-branches.mts  release-branches.test.ts  release-configuration.test.ts  release-control.test.ts  release-edge-cases.test.ts  release-environment.mts  release-environment.test.ts  release-notes.mts  release-notes.test.ts  release-workspace.mts  release-workspace.test.ts  release.command.test.ts  release.mts  restore-version.mts  semantic-release-plugin.command.test.ts  semantic-release-plugin.mts  set-version.mts  update-version.mts  windows-msi-version.mts
src/: App.vue  AppSetup.vue  external.d.ts  index.css  lib.ts  main.tsx  override.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Delta Comic.app/Contents/: Info.plist
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  fs_scheme.rs  lib.rs  logger.rs  sentry.rs
src/components/: ImagedIcon.vue  createFavouriteCard.vue  favouriteSelect.vue  forkSelect.vue  listAction.vue  listSearcher.vue  previewUser.vue  shareButton.vue  unitCard.vue  updateChecker.vue
src/db/: favourite.ts  history.ts  index.ts  itemStore.ts  recentView.ts  subscribe.ts
src/pages/: cate.vue  (+4 more)
tauri-plugin-aptabase/: pnpm-lock.yaml
(+76 files in other folders)
