[package]
name = "delta-comic"
version = "0.2.1"
description = "Per Aspera, Ad Astra"
authors = ["wenxig"]
license = "AGPL-3.0-only"
repository = "https://github.com/delta-comic/delta-comic/"
edition = "2024"
rust-version = "1.92.0"

[profile.dev]
opt-level = 0          # 无优化
debug = true           # 开启调试信息
overflow-checks = true # 整数溢出检查
incremental = true     # 启用增量编译


[profile.dev.package."*"]
opt-level = 0 # 无优化


[profile.release]
codegen-units = 1  # 一个接一个地编译包，这样编译器就可以更好地优化
lto = true         # 启用链接到优化
opt-level = 3      # 最大优化
strip = true       # 删除调试符号
debug = false      # 关闭调试信息
incremental = true # 启用增量编译

[lib]
name = "delta_comic"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-persisted-scope = "2.3.5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = { version = "2.5.6", features = ["unsafe-headers", "json"] }
tauri-plugin-upload = "2.4.0"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", features = [
  "sqlite",
], branch = "v2" }
tauri-plugin-pinia = "4.1.0"
tauri-plugin-m3 = "0.3.1"
tauri-plugin-aptabase = { path = "../tauri-plugin-aptabase" }
tokio = "1.49.0"
tauri-plugin-sentry = "0.5.0"
sentry = { version = "0.42", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "release-health",

  "reqwest",
  "rustls",
] }
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
tauri-plugin-log = "2"
log = "0.4.29"
tauri-runtime-wry = "2.9.3"
tauri-plugin-cors-fetch = { path = "../tauri-plugin-cors-fetch", features = [
  "system-proxy",
  "json",
  "form",
  "cookies",
  "charset",
  "stream",
  "rustls-no-provider",
  "http2",
  "query",
] }

[target.'cfg(any(target_os = "android"))'.dependencies]
tauri-plugin-android-package-install = "2.0.1"

[features]
custom-protocol = [
  "tauri/custom-protocol",
] # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
